--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=currencyexchange
+ticker.url=https://api.bitpanda.com/v1/ticker
+logging.level.com.scartascini=INFO
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
